# financing

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Dockerfile  cx.yaml
billo/: Cargo.toml  __main__.py  bin.rs  cli.py  rustfmt.toml
billo/_avg/: cli.py  core.py
billo/lib/: datetime.rs  err.rs  mod.rs  running.rs
billo/lib/running/: computing.rs  datastructures.rs  mod.rs
billo/lib/running/configuring/: analysis.rs  data.rs  mod.rs
scripts/: docker_build.sh
tests/smoketest/: __init__.py  main_test.py
tests/smoketest/data/in/: billo.json
tests/smoketest/data/in/budget-book/: 202401.json
