[package]
name = "billo"
version = "0.1.0"
edition = "2021"
description = "Budget planning based on text input"
authors = ["Parga Cacheiro, Dominic <dominic.parga@gmail.com>"]

# Info: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cmdline parsing
clap = { version = "4", features = ["derive"] }
# json serializer
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "billo"
path = "lib/mod.rs"

[[bin]]
name = "billo"
path = "bin.rs"
