[package]
name = "billo"
version = "0.1.0"
edition = "2021"
description = "Budget planning based on text input"
authors = ["Parga Cacheiro, Dominic <dominic.parga@gmail.com>"]

# Info: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cmdline parsing
clap = { version = "4", features = ["derive"] }
# json serializer
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# initialization of statics during runtime
lazy_static = { version = "1" }
# regex
regex = { version = "1" }
# date and time
chrono = { version = "0.4" }

[lib]
name = "billo"
path = "lib/mod.rs"

[[bin]]
name = "billo"
path = "bin.rs"
